--- a/index.html
+++ b/index.html
@@ -18,18 +18,18 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/">Home</a>
+                <a class="nav-link active" aria-current="page" href="/Swch-Exam/">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/project1.html">Program 1</a>
+                <a class="nav-link" href="/Swch-Exam/project1.html">Program 1</a>
                 <!-- <a class="nav-link" href="/subject1.html">Zagadnienie 1</a> -->
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/project2.html">Program 2</a>
+                <a class="nav-link" href="/Swch-Exam/project2.html">Program 2</a>
                 <!-- <a class="nav-link" href="/subject2.html">Zagadnienie 2</a> -->
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/project3.html">Program 3</a>
+                <a class="nav-link" href="/Swch-Exam/project3.html">Program 3</a>
               </li>
             </ul>
           </div>
